--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     }
 </style>
 
-<div>
-    <body>
-        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-    </body>
+<div id="logo">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
 </div>
