--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </style>
 
 <div id="logo">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 </div>
