--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <div id="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    <br>
+    <br>
+    <form action="/search_bar">
+        <input type="text" id="search_bar">
+    </form>
 </div>
 
 <div>
